# apogeum

./: .gitignore  MODULE.bazel  bazel-apogeum_finder  bazel-bin  bazel-out  bazel-testlogs  requirements.in  requirements.txt  test.txt
data/: BUILD  test.txt
data/out2/: accelerometer_clean_cdm.csv  accelerometer_noisy_nosecone.csv  gnss_clean.csv  gnss_real.csv
src/: ApogeeDetector.h  BUILD.bazel  KalmanFilter.cpp  KalmanFilter.h  KalmanFilterR7.cpp  KalmanFilterR7.h  Matrix.cpp  Matrix.h  apogee.cpp  graphTest.cpp  graphTest.py  kalman_test.cpp  main.cpp
src/apogeum-barometer/: BUILD.bazel  barometer.cpp  data.csv
src/graphTest/: BUILD.bazel  graphTest.py
