cc_binary(
    name = "main",
    srcs = ["KalmanFilter.cpp", "KalmanFilter.h", "main.cpp", "KalmanFilterR7.h","KalmanFilterR7.cpp","Matrix.h","Matrix.cpp"],
    deps = ["@eigen", "//src/csvReader"],
    data = [
        "//data:data_files",
    ],
)

cc_binary(
    name = "csv_apogee_test",
    srcs = ["apogee.cpp", "ApogeeDetector.h", "KalmanFilterR7.h", "KalmanFilter.h", "KalmanFilter.cpp", "KalmanFilterR7.cpp"],
    deps = ["@eigen", "//src/csvReader"],
    data = [
        "//data:data_files",
    ],
)
 
cc_binary(
    name = "libmodule.so",
    srcs = ["graphTest.cpp", "KalmanFilter.cpp", "KalmanFilter.h", "KalmanFilterR7.h", "KalmanFilterR7.cpp"],
    deps = ["@eigen", "//src/csvReader"],
    linkshared  = True,  # generuje shared library (.so)
)

py_binary(
    name = "graphTest",
    srcs = ["graphTest.py"],
    data = [":libmodule.so"],
    deps = [
        "@apogeum_pip//numpy",
        "@apogeum_pip//matplotlib",
        "@apogeum_pip//pandas",
    ],
)
